[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projectedlmc"
version = "0.0.7"
authors = [
  { name="", email="" },
]
description = "A short package based on gpytorch implementing the Projected LMC model"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/QWERTY6191/projected-lmc"
